Fix yes/no/na alignment

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ strong {
 
 input[type=radio] {
   position: relative;
-  left: -25%;
+  float: none;
 }
 
 .percent-wrapper {
@@ -218,4 +218,10 @@ input[type=radio] {
 h1, h2, h3, h4 {
   font-family: "Georgia", serif !important;
   color: #003361 !important;
+}
+
+.answer span {
+  width: 30%;
+  text-align: center;
+  float: left;
 }
